--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "next": "9.5.2",
+    "next-images": "^1.4.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-text-loop": "^2.3.0",
+    "styled-jsx": "^3.3.0"
   }
 }
