--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "next": "9.5.2",
     "next-images": "^1.4.1",
     "react": "16.13.1",
